--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
  Text Domain:  queencraft
 */
 
-h2.blog-title {
+h2.blog-title, h1.blog-title {
 	font-size: 3.25em;
 	line-height: 50%;
 	letter-spacing: 3px;
@@ -20,7 +20,7 @@ h2.blog-title {
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
-    h2.blog-title {
+    h2.blog-title, h1.blog-title {
         font-size: 1.5em;
 				line-height: 1.2em;
 				letter-spacing: 1px;
